fix description spacing now that page width is normal

--- a/eulers_cookbook/static/css/base.css
+++ b/eulers_cookbook/static/css/base.css
@@ -203,7 +203,7 @@ td.solved {
 }
 
 .problem-description {
-    margin: 15% 10% 0px 14%;
+    margin: 40px 15% 0px 15%;
     padding: 25px 0px 10px;
     font-size: 16px;
     text-align: justify;
