--- a/eulers_cookbook/static/css/responsive.css
+++ b/eulers_cookbook/static/css/responsive.css
@@ -162,6 +162,9 @@
     text-decoration: none;
   }
 
+  .problem-description {
+    margin: 100px 15% 0px 15%;
+
 }
 
 /* ----------- tablet ----------- */
